feature: phone on desktop page done

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
               </div>
 
               <div class="phone-features">
-                <img src="./images/iphone12-Mask.svg" alt="">
-                <img src="./images/iphone12-mask-info.svg" alt="">
-                <img src="./images/iphone12-mask-card.svg" alt="">
+                <img src="./images/iphone12-Mask.svg" class="image1">
+                <img src="./images/iphone12-mask-info.svg" class="image2">
+                <img src="./images/iphone12-mask-card.svg" class="image3">
               </div>
               
               <div class="head-paragraph-features">
