--- a/index.html
+++ b/index.html
@@ -193,6 +193,39 @@
               </div>   
             </div>
         </section>
+
+        <section class="section-4">
+          <div class="part-3">
+            <h2 class="transaction-head2">How Does It Work?</h2>
+            <div class="pics-transaction-tablet-mobile">
+              <img src="./images/Group - 2/4 → 02-app-showcase-screens.png.svg" alt="Phone left" class="phone-tablet-left">
+              <img src="./images/transaction-phone-tablet-mobile-desktop.svg" alt="Phone shell" class="phone-shell-middle">
+              <img src="./images/Group - 3/4 → 03-app-showcase-screens.png.svg" alt="Phone middle" class="phone-tablet-mobile-middle">
+              <img src="./images/Group - 4/4 → 04-app-showcase-screens.png.svg" alt="Phone right" class="phone-tablet-right">
+            </div>
+
+            <div class="pics-transaction-desktop">
+              <img src="./images/transaction-phone-left-desktop.svg" alt="Phone left" class="phone-desktop-left">
+              <img src="./images/transaction-phone-tablet-mobile-desktop.svg" alt="Phone shell" class="phone-shell-middle-desktop">
+              <img src="./images/transaction-phone.middle.svg" alt="Phone middle" class="phone-desktop-middle">
+              <img src="./images/transation-phone-right-desktop.svg" alt="Phone right" class="phone-desktop-right">
+            </div>
+
+            <div class="h3-paragraph-tablet-mobile">
+            <h3 class="transaction-head3">Transfers to people from
+              your contact list</h3>
+            <p>Proin volutpat mollis egestas. Nam luctus facilisis
+              ultrices. Pellentesque volutpat ligula est. Mattis
+              fermentum, at nec lacus.</p>
+            </div>
+
+            <div class="h3-paragraph-desktop">
+              <h4 class="transaction-head4">Latest transaction history</h4>
+              <p>Enim, et amet praesent pharetra. Mi non ante hendrerit amet sed. Arcu sociis tristique quisque hac in consectetur condimentum. </p>
+
+            </div>
+          </div>
+        </section>
     
 </body>
 </html>
