Feature: Done with layout

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
               <div class="text-subscribe-desktop-only">
                 <div class="text-subscribe">
                   <img src="./images/imgage-subscribe.svg" alt="Bell">
-                  <h4>Subscribe to our newsletter</h4>
+                  <h4>Subscribe to our newsletter to stay informed about latest updates</h4>
                 </div>
                 <div class="form">  
                     <div class="input-icon">
@@ -430,6 +430,10 @@
                 </div>  
             </div>
           </section>
+
+          <div class="footer">
+            <p>&copy;2024 Silicon. <span>All rights reserved. Credit MadrasThemes</span></p>
+          </div>
   <script>
     var acc = document.getElementsByClassName("accordion");
     var i;
