Feature: Finished darkmode

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="page-1">
             <div id="container-1" class="nav">
                 
-                <a id="logo" href="index.html"><img src="./images/logo.svg" alt="Logo"></a>
+                <a id="logo" href="index.html"><img src="./images/icons/logo-navbar.svg" alt="Logo"><span>Silicon</span></a>
 
                 <nav id="main-menu" class="navbar">
                     <a class="nav-link" href="#">Features</a>
@@ -53,8 +53,20 @@
                   banking. Save, spend & manage money in your pocket.</p>
               </div>
               <div class="apple-google-btns">  
-                <a class="btn-apple" href="#"><img id="logo-apple" src="./images/icons/appstore-light.svg" alt="Apple store"></a>
-                <a class="btn-google" href="#"><img src="./images/googleplay-light-tablet.svg" alt="Google store"></a>
+                <a class="btn-apple" href="#">
+                  <i class="fa-brands fa-apple"></i>
+                  <div class="text-container">
+                    <span class="download">Download on the</span>
+                    <span class="store">AppStore</span>
+                </div>  
+                </a>
+                <a class="btn-apple" href="#">
+                  <img class="google-play" src="./images/icons/icons8-google-play-store-24.svg" alt="Google play icon">
+                  <div class="text-container">
+                    <span class="download">Get it on</span>
+                    <span class="store">GooglePlay</span>
+                </div>  
+                </a>
               </div>
             
 
