Feature: Done with assignment

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             </div>
     </section>        
-        <section class="section-2">
+        <section class="section-2" aria-label="Download App overview">
           
           <div id="container-2" class="part-2 cont-2">
             
@@ -200,7 +200,7 @@
             </div>
         </section>
 
-        <section class="section-4">
+        <section class="section-4" aria-label="Understanding how the app works">
           <div class="part-4">
             <h2 class="transaction-head2">How Does It Work?</h2>
             <div class="pics-transaction-tablet-mobile">
@@ -233,7 +233,7 @@
           </div>
         </section>
 
-        <section class="section-5-only-desktop part-5">
+        <section class="section-5-only-desktop part-5" aria-label="Learning more about the app">
           <div class="make-money">
             <h2 class="make-money-header">Make your money transfer simple and clear</h2>
             <ul class="list-head">
@@ -279,7 +279,7 @@
                 </div>
         </section>
 
-        <section class="section-6-only-desktop">
+        <section class="section-6-only-desktop" aria-label="Support and reviews overview">
           <div class="part-6">
             <h1>Clients are Loving Our App</h1>
             <div id="quote-second" class="quote"><img src="./images/icons/icon-quotes.svg" alt="First Quotes"></div>
@@ -318,7 +318,7 @@
           </div>
         </section>
 
-        <section class="section-7">'
+        <section class="section-7" aria-label="FAQs of the app">
           <div class="part-7">
             <h2>Any questions? Check out the FAQs</h2>
             <p class="para-faq">Still have unanswered questions and need
@@ -390,7 +390,7 @@
               <div class="box1-support">
                 <img src="./images/support-phone.svg" alt="Support phone">
                 <a href="#" class="contact-us">
-                <span>Contact us</span>
+                <span class="contact-chats1">Contact us</span>
                 <i class="fa-solid fa-arrow-right" style="color: #6366F1;"></i>
                 </a>
               </div>
@@ -398,7 +398,7 @@
               <div id="box-2" class="box1-support">
                 <img src="./images/support-phone-green.svg" alt="Support phone">
                 <a href="#" class="contact-us">
-                <span class="contact-chat">Contact us</span>
+                <span class="contact-chats2">Contact us</span>
                 <i id="arrow-green" class="fa-solid fa-arrow-right" style="color: green;""></i>
                 </a>
               </div>
@@ -406,7 +406,7 @@
           </div>  
           </section>
 
-          <section class="section-8">
+          <section class="section-8" aria-label="Subscribe to our newsletter overview">
             <div class="part-8">
               <div class="text-subscribe-desktop-only">
                 <div class="text-subscribe">
@@ -415,7 +415,8 @@
                 </div>
                 <div class="form">  
                     <div class="input-icon">
-                      <input class="form-input" aria-label="Email for newsletter subscription" type="text" required placeholder="Your email">
+                      <i class="fa-regular fa-envelope"></i>
+                      <input class="form-input" aria-label="Email for newsletter subscription" type="email" placeholder="Your email">
                       <button type="button" aria-label="Subscribe to newsletter" class="btn-subscribe">Subscribe</button>
                     </div>  
                 </div>
@@ -427,7 +428,8 @@
                   </div>
                   <div class="form">  
                       <div class="input-icon">
-                        <input class="form-input" type="text" required placeholder="Your email">
+                        <i class="fa-regular fa-envelope"></i>
+                        <input class="form-input email" type="email" placeholder="Your email">
                         <button type="button" class="btn-subscribe">Subscribe</button>
                       </div>  
                   </div>
@@ -435,11 +437,11 @@
             </div>
           </section>
 
-          <footer class="footer" role="contentinfo">
+          <footer class="footer" role="contentinfo" aria-label="Footer overview">
             <p>&copy;2024 Silicon. <span>All rights reserved. Credit MadrasThemes</span></p>
           </footer>
   </main>
 
-<script src="./JS/darkmode.js"></script>
+<script src="./JS/main.js"></script>
 </body>
 </html>
