Feature: Last small fixes

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <body>
   <main>
     <section class="page-1">
+      <!--Layout taken from Hans Mattin-Lassei with modification from me -->
             <div id="container-1" class="nav">
                 
                 <a id="logo" href="index.html"><img src="./images/icons/logo-navbar.svg" alt="Logo"><span>Silicon</span></a>
 
                 <nav id="main-menu" class="navbar" aria-label="Main Navigation">
-                    <a class="nav-link" href="features.html">Features</a>
+                    <a class="nav-link" href="#container-3">Features</a>
                   </nav>
 
                 <div id="darkmode-toogle-switch" class="btn-toogle-switch">
@@ -103,10 +104,10 @@
                 <div class="logo-desktop-tablet">  
                   <img src="./images/logo-4-desktop-tablet.svg" alt="Fourth logo is called logoipsum with solid letters">
                 </div>
-                <div class="logo-desktop-tablet" id="desktop-only">  
+                <div class="logo-desktop-tablet" id="desktop-only1">  
                   <img src="./images/logo-5-only-desktop.svg" alt="Fifth logo is for desktop only with solid letters">
                 </div>
-                <div class="logo-desktop-tablet" id="desktop-only">  
+                <div class="logo-desktop-tablet" id="desktop-only2">  
                   <img src="./images/logo-6-only-desktop.svg" alt="Sixth logo for desktop only with solid letters">
                 </div>  
               </div>
@@ -197,17 +198,16 @@
                   </div>
                 </div> 
               </div>   
-            </div>
         </section>
 
         <section class="section-4" aria-label="Understanding how the app works">
           <div class="part-4">
             <h2 class="transaction-head2">How Does It Work?</h2>
             <div class="pics-transaction-tablet-mobile">
-              <img src="./images/Group - 2/4 → 02-app-showcase-screens.png.svg" alt="Phone left" class="phone-tablet-left">
+              <img src="./images/showcase-2.svg" alt="Phone left" class="phone-tablet-left">
               <img src="./images/transaction-phone-tablet-mobile-desktop.svg" alt="Phone shell" class="phone-shell-middle">
-              <img src="./images/Group - 3/4 → 03-app-showcase-screens.png.svg" alt="Phone middle" class="phone-tablet-mobile-middle">
-              <img src="./images/Group - 4/4 → 04-app-showcase-screens.png.svg" alt="Phone right" class="phone-tablet-right">
+              <img src="./images/showcase-3.svg" alt="Phone middle" class="phone-tablet-mobile-middle">
+              <img src="./images/showcase-4.svg" alt="Phone right" class="phone-tablet-right">
             </div>
 
             <div class="pics-transaction-desktop">
@@ -243,7 +243,7 @@
             </ul>
           </div>  
             <div class="btn-1">
-            <a id="btn-make" href="#" class="btn-money">
+            <a href="#" class="btn-money">
               <span>Learn more</span>
               <i class="fa-solid fa-arrow-right"></i>
             </a>
@@ -323,13 +323,13 @@
             <h2>Any questions? Check out the FAQs</h2>
             <p class="para-faq">Still have unanswered questions and need
               to get in touch?</p>
+              <!--Code taken from w3 with modification from me-->
             <div class="box-accordion">
-
               <button class="accordion">Is any of my personal information
                 stored in the App?
-                <div class="btn-accordion">
+                <span class="btn-accordion">
                   <i class="fa-solid fa-chevron-down"></i>
-                </div>  
+                </span>  
               </button>
               <div class="panel">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -337,45 +337,45 @@
 
               <button class="accordion">What formats can I download my
                 transaction history in?
-                <div class="btn-accordion">
+                <span class="btn-accordion">
                   <i class="fa-solid fa-chevron-down"></i>
-                </div> 
+                </span> 
               </button>
               <div class="panel">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               </div>
 
               <button class="accordion">Can I schedule future transfers?
-                <div class="btn-accordion">
+                <span class="btn-accordion">
                   <i class="fa-solid fa-chevron-down"></i>
-                </div> 
+                </span> 
               </button>
               <div class="panel">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               </div>
               <button class="accordion">When can I use Banking App
                 services?
-                <div class="btn-accordion">
+                <span class="btn-accordion">
                   <i class="fa-solid fa-chevron-down"></i>
-                </div> 
+                </span> 
               </button>
               <div class="panel">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               </div>
               <button class="accordion">Can I create my own password that is
                 easy for me to remember?
-                <div class="btn-accordion">
+                <span class="btn-accordion">
                   <i class="fa-solid fa-chevron-down"></i>
-                </div> 
+                </span> 
               </button>
               <div class="panel">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               </div>
               <button class="accordion">What happens if I forget or lose my
                 password?
-                <div class="btn-accordion">
+                <span class="btn-accordion">
                   <i class="fa-solid fa-chevron-down"></i>
-                </div> 
+                </span> 
               </button>
               <div class="panel">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -399,7 +399,7 @@
                 <img src="./images/support-phone-green.svg" alt="Support phone">
                 <a href="#" class="contact-us">
                 <span class="contact-chats2">Contact us</span>
-                <i id="arrow-green" class="fa-solid fa-arrow-right" style="color: green;""></i>
+                <i id="arrow-green" class="fa-solid fa-arrow-right" style="color: green;"></i>
                 </a>
               </div>
             </div>
@@ -437,7 +437,7 @@
             </div>
           </section>
 
-          <footer class="footer" role="contentinfo" aria-label="Footer overview">
+          <footer class="footer" aria-label="Footer overview">
             <p>&copy;2024 Silicon. <span>All rights reserved. Credit MadrasThemes</span></p>
           </footer>
   </main>
