Feature: ready for delivery

--- a/index.html
+++ b/index.html
@@ -261,11 +261,11 @@
 
             <h2 class="recieve-head">Receive payment from international bank details</h2>
               <div class="flex-recieve">
-                <div class="card-recieve">
+                <div class="card-recieve card-folder">
                   <img src="./images/icons/icon-payments.svg" alt="Icon card">
                   <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
                 </div>
-                <div class="folder-recieve">
+                <div class="folder-recieve card-folder">
                   <img src="./images/icons/icon-cashback.svg" alt="Icon folder">
                   <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
                 </div>
